[package]
name = "secret_mem"
version = "0.1.0"
authors = ["Giuseppe Eletto <giuseppe@eletto.me>"]
rust-version = "1.70"
edition = "2021"

[dependencies]
zeroize = "1.8"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
] }
