[package]
name = "secret_mem"
description = "Rust library for securely managing sensitive data in memory."
version = "0.1.0"
authors = ["Giuseppe Eletto <giuseppe@eletto.me>"]
repository = "https://github.com/giuseppe998e/secret-mem"
license = "MIT OR Apache-2.0"
rust-version = "1.70"
edition = "2021"

[dependencies]
zeroize = "1.8"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
] }
